# test

api/: Dockerfile  Dockerfile.dev  Dockerfile.testing  Makefile  README.md  alembic.ini  docker-compose.testing.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 035c74ece7ba_parent_electric_panels_optional_breaker_count.py  0609aa3c2254_add_users_table.py  187628df55a6_add_electricity_monitoring_service.py  1bbb657cef10_add_organizations_model.py  1e5c53345116_add_adapter_energy_load_curve_widgets.py  217a95643936_add_locations_model.py  2c3194b41591_add_adapter_panel_system_health_.py  2e373c0cf47a_add_organization_users.py  3119e4929e97_zone_temps_feature_tag.py  33285d4ddcee_add_control_zone_temperature_place_links.py  33f4be5fd593_add_hvac_service.py  3ca00ab02893_add_modbus_address_to_thermostats.py  3f48cb6cd8ae_add_gateways.py  4392c9e1fcf4_cascade_updates.py  4ac2fe81068e_add_adapter_hvac_schedule_events_and_.py  504630988dda_add_access_scopes_and_roles.py  598c6d9de14e_add_temperature_ranges.py  5b5eb7f9d21a_add_adapter_temperature_dashboards.py  5cb3794354af_remove_temp_unit_widget_composite_pk.py  5f8aea85777c_operating_range_notifcations.py  5fca6df76ac3_add_adapter_electric_dashboard_and_.py  6ebc944fff01_add_user_phone_number.py  (+34 more)
api/app/: __init__.py  main.py  sqlalchemy_session.py  utils.py
api/envs/: .env.dev  .env.testing
api/scripts/: delete_location_postgres_data.py  delete_organization_postgres_data.py  load_location_data.py  seed.py  unload_location_data.py
api/tests/: conftest.py
(+990 files in other folders)
