[tool.poetry]
name = "powerx-api"
version = "0.1.0"
description = ""
authors = ["Maldrotic <ryan.gahart@gmail.com>"]
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.30"
uvicorn = "^0.29.0"
passlib = "^1.7.4"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.18"
pyjwt = "^2.8.0"
alembic-postgresql-enum = "^1.2.0"
boto3 = "^1.34.144"
boto3-stubs = {extras = ["s3", "timestream-query"], version = "^1.34.149"}
redis = "^5.0.7"
types-redis = "^4.6.0.20240425"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20240316"
requests = "^2.32.3"
types-requests = "^2.32.0.20240712"
pillow = "^10.4.0"
sendgrid = "^6.11.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.4"}
pygments = "^2.19.1"
types-pygments = "^2.19.0.20250107"
pydantic = {extras = ["email"], version = "^2.10.6"}
cryptography = "43.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.5"
mypy = "^1.10.0"
types-passlib = "^1.7.7.20240327"
edgedb = "^2.0.0"
debugpy = "^1.8.5"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
